# harness-template

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  lefthook.yml
.claude/: settings.json
.claude/commands/: gc-refactor.md  grade.md  harness-check.md
.github/ISSUE_TEMPLATE/: spec.yml
.github/workflows/: gc.yml  harness.yml  issue-implement.yml  issue-to-spec.yml  review.yml  spec-tests.yml
docs/: architecture.md  conventions.md  harness.md
harness/: grades.yml
harness/policies/: boundary-imports.yml  no-silent-fallback.yml
scripts/: gc-refactor.sh  harness-check.sh  install-stack.sh  setup-github-labels.sh
stacks/go/: .golangci.yml  go.mod.template  grade.sh  profile.json
stacks/go/checks/: architecture_test.go
stacks/go/src/adapters/: clock.go
stacks/go/src/app/: say_hello.go  say_hello_test.go
stacks/go/src/core/: greeting.go  greeting_test.go
stacks/go/src/interface/: cli.go
stacks/laravel/: README.md  composer.json  grade.sh  lefthook.yml  phpstan.neon  phpunit.xml  pint.json  profile.json  rector.php
stacks/laravel/app/Application/: SayHello.php  SayHelloTest.php
stacks/laravel/app/Console/: HelloCommand.php
stacks/laravel/app/Domain/: Greeting.php
stacks/laravel/app/Http/: HelloCommand.php
stacks/laravel/app/Infrastructure/: Clock.php
stacks/laravel/app/UseCases/: SayHello.php
stacks/laravel/checks/: ArchitectureTest.php
stacks/laravel/docs/: architecture.md  conventions.md  harness.md
stacks/laravel/tests/: Pest.php
stacks/laravel/tests/Unit/Domain/: GreetingTest.php
stacks/python/: grade.sh  profile.json  pyproject.toml
stacks/python/checks/: test_architecture.py
stacks/python/src/adapters/: __init__.py  clock.py
stacks/python/src/app/: say_hello.py  test_say_hello.py
stacks/python/src/core/: greeting.py  test_greeting.py
stacks/python/src/interface/: cli.py
stacks/typescript/: .eslintrc.cjs  eslint.config.js  grade.sh  knip.json  package.json  profile.json  tsconfig.json  vitest.config.ts
stacks/typescript/checks/: architecture.test.ts
stacks/typescript/src/adapters/: index.ts
stacks/typescript/src/app/: index.ts  say-hello.test.ts  say-hello.ts
stacks/typescript/src/core/: greeting.test.ts  greeting.ts  index.ts
stacks/typescript/src/interface/: cli.ts
(+1 files in other folders)
