[project]
name = "harness-template-py"
version = "0.0.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle / pyflakes
  "I",             # isort
  "B",             # bugbear
  "UP",            # pyupgrade
  "SIM",           # simplify
  "RUF",           # ruff-specific
]
ignore = []
# Architecture invariants are enforced structurally by checks/test_architecture.py
# rather than via flake8-tidy-imports — banned-api is project-global and cannot
# express the per-layer rules in docs/architecture.md.

[tool.ruff.lint.per-file-ignores]
"src/**/test_*.py" = ["S101"]
"src/**/__init__.py" = ["F401"]

[tool.mypy]
strict = true
mypy_path = "src"
exclude = ["tests/fixtures/"]

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
  "src/interface/*",   # entry points — exercised by integration tests
  "src/adapters/*",    # adapters wrap I/O — exercised via fakes in app tests
  "src/**/__init__.py",
  "src/**/test_*.py",
]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.vulture]
paths = ["src"]
min_confidence = 80
